5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_1804.log
== TEST (2019-03-27 00:10:54) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: ")
			
from math import*		

D=sqrt((x2-x1**2+(y2-y1)**2))
			
print(round(D,3))
-- ERROR:
File "XXXX", line 7
    from math import*		
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:11:41) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1**2+(y2-y1)**2))
			
print(round(D,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    D=sqrt((x2-x1**2+(y2-y1)**2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:12:22) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:12:30) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:12:40) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- EXECUTION TIME:
0.142908
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:17:06) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- EXECUTION TIME:
0.184703
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:16) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- EXECUTION TIME:
0.156104
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:22:02) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:22:05) 
-- CODE:
x1=float(input("xa: "))
y1=float(input("ya: "))

x2=float(input("xb: "))
y2=float(input("yb: "))
			
from math import*		

D=sqrt((x2-x1)**2+(y2-y1)**2)
			
print(round(D,3))
-- EXECUTION TIME:
0.163227
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
